# geometry_tools

./: CMakeLists.txt  README.md
.github/workflows/: cpp_linux_x86.yml
include/GeometryTools/: Point.h  Speed.h  Trajectory.h
src/: Point.cpp  Speed.cpp  Trajectory.cpp
